tried to fix react with z-index

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -14,4 +14,9 @@
 
 .body-background {
   background-image: url('/assets/wave_red_lines_light_20065_1920x1080.jpg');
+  z-index: 1;
+}
+
+#app {
+  z-index: 999;
 }
